# netcup-api-filter

./: .app_startup  .env.defaults  .env.example  .env.local  .env.services  .env.test  .env.webhosting.backup  .env.workspace  .flake8  .gitignore  .htaccess.hello-world  .htaccess.production  =10.0.0  ADMIN_GUIDE.md  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLIENT_AUTH.md  CLIENT_TEMPLATES.md  CLIENT_USAGE.md  CONFIGURATION_GUIDE.md  CONFIG_DRIVEN_ARCHITECTURE.md  CONFIG_IMPLEMENTATION_SUMMARY.md  DEBUGGING_SUMMARY.md  DEBUG_404_ERROR.md  DEBUG_QUICK_START.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TESTING_GUIDE.md  DOCKER_NETWORKS.md  Dockerfile  ENV_DEFAULTS.md  ENV_WORKSPACE.md  EXAMPLES.md  FAIL_FAST_POLICY.md  HTTPS_LOCAL_TESTING.md  ITERATION_SUMMARY.md  LICENSE  LOCAL_DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_SUMMARY.md  (+114 more)
.devcontainer/: Dockerfile  cleanup-venv.sh  devcontainer.json  post-create.sh  requirements.txt
bootstrap/: __init__.py  seeding.py
deploy-local-build/: .env.defaults  DEPLOY_README.md  build_info.json
docs/: ADMIN_GUIDE.md  ADMIN_UI_UX_REVIEW.md  API_REFERENCE.md  CERTIFICATE_MOUNTING.md  CHARSET_VALIDATION.md  CLIENT_AUTH.md  CLIENT_USAGE.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SEEDING.md  CONFIG_ENVIRONMENT_REVIEW.md  DATABASE_MODELS_REVIEW.md  DB_SEEDING_REVIEW.md  DDNS_PROTOCOLS.md  DEPLOYMENT_WORKFLOW.md  DEPLOY_ARCHITECTURE.md  DOCKER_NETWORKS.md  ENV_WORKSPACE.md  FAIL_FAST_PRINCIPLE.md  FEATURES.md  FQDN_DETECTION.md  FUNCTIONAL_WORKFLOW_REVIEW.md  GUNICORN_CONFIG.md  JOURNEY_CONTRACTS.md  MAILPIT_CONFIGURATION.md  MCP_FUSE_SETUP.md  OPERATIONS_GUIDE.md  PARALLEL_SESSION_STRATEGY.md  PLAYWRIGHT_MCP_SETUP.md  PLAYWRIGHT_WAITING_PATTERNS.md  PRODUCTION_READINESS.md  RATE_LIMITING.md  README.md  ROOT_INVENTORY.md  ROUTE_COVERAGE.md  SCRIPT_FAIL_FAST_MIGRATION.md  SECURITY.md  SECURITY_ERROR_TAXONOMY.md  SECURITY_IMPROVEMENTS_2FA.md  SECURITY_ISSUE_2FA_LOCKOUT_NOTIFICATIONS.md  SECURITY_REVIEW_REPORT.md  (+16 more)
scripts/: audit_routes_vs_ui_tests.py  ci_bootstrap_e2e.py  migrate_asyncio_sleep.py
templates/: admin_base.html  base_modern.html
tests/: conftest.py  test_2fa_security_functional.py  test_database_init.py  test_ddns_parsing_unit.py  test_ddns_property.py  test_factories.py  test_lightweight_migrations_unit.py  test_netcup_client_resilience_unit.py  test_netcup_client_unit.py  test_password_policy_unit.py  test_realm_matching_unit.py  test_realm_scope.py  test_recovery_codes_unit.py  test_telegram_2fa.py  test_telegram_linking.py  test_token_auth_unit.py  test_token_model_property.py  test_validators_property.py  test_validators_unit.py
tooling/: PLAYWRIGHT-TESTING.md  README.md  flask-manager.sh  reset-local-deployment.sh  run-tests.sh  run-ui-validation.sh  setup-playwright.sh  start-ui-stack.sh  validate-playwright-websocket.py
ui_tests/: MOCK_API_README.md  MOCK_SMTP_README.md  README.md  __init__.py  admin_ux_audit.py  analyze_ui_screenshots.py  auth_state.py  browser.py  capture_ui_screenshots.py  compare_visuals.py  config.py  conftest.py  conftest_mock_api.py  cross_role_helpers.py  workflows.py  (+14 more)
(+517 files in other folders)
