# ============================================================================
# Package metadata
# ----------------------------------------------------------------------------
# requires-python guards pip/build tools from installing on unsupported versions.
# The webhosting target supports Python 3.9 and 3.11; dev uses 3.13.
# ============================================================================
[metadata]
name = netcup-api-filter
requires_python = >=3.9

# ============================================================================
# Mutation-testing configuration (mutmut 3.x)
# ----------------------------------------------------------------------------
# This file exists ONLY for mutmut — it has no effect on the normal pytest run
# (pytest reads pytest.ini, which takes precedence over setup.cfg for [tool:pytest]).
# The [mutmut] section is invisible to pytest.
#
# Invoke via:  tooling/mutation/run.sh run [module-path]
# NEVER add this to CI or pytest.ini.
# ============================================================================
[mutmut]
source_paths =
    src/netcup_api_filter/token_auth.py
    src/netcup_api_filter/models.py
    src/netcup_api_filter/utils.py
    src/netcup_api_filter/api/ddns_protocols.py
    src/netcup_api_filter/recovery_codes.py

# Also copy project config and src into the mutants sandbox
also_copy =
    src/
    pytest.ini
    requirements-dev.txt

# Neutralise repo addopts (--cov / -x / --tb=short) and run only the fast
# unit subset.  The -o addopts="" override drops pytest.ini addopts so each
# mutant evaluates in a few seconds instead of running the full coverage pass.
pytest_add_cli_args =
    -o
    addopts=

pytest_add_cli_args_test_selection =
    tests/test_token_auth_unit.py
    tests/test_realm_matching_unit.py
    tests/test_validators_unit.py
    tests/test_ddns_parsing_unit.py
    tests/test_recovery_codes_unit.py
    tests/test_password_policy_unit.py
    tests/test_token_model_property.py
    tests/test_ddns_property.py
    tests/test_validators_property.py
